--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -19,6 +19,7 @@ a img {border: 0;}
 
 body {
 	background-color: #000000;
+	color: #ffffff;
 	font-family: Helvetica, sans-serif;
 }
 
@@ -31,7 +32,7 @@ canvas {
 	margin-top: 40%;
 }
 
-.connect, .ready-screen {
+.connect, .ready-screen, .next-object {
 	width: 80%;
 	margin: 40% auto;
 	font-size: 2em;
@@ -64,7 +65,12 @@ canvas {
 		color: #fff;
 		font-size: 10em;
 		text-align: center;
+		margin-top: 0;
 	}
+}
+
+.next-object {
+	text-align: center;
 }
 
 .hidden {
