fixed connection issue

--- a/views/client.jade
+++ b/views/client.jade
@@ -15,5 +15,6 @@ block content
 		button#connect Connect
 
 	div.ready-screen.hidden
+		p.waiting Waiting for more players...
 		button#ready.hidden READY
 		p.count-down.hidden 5
