--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,11 @@ html
 	head
 		title= title
 		link(rel='stylesheet', href='/stylesheets/style.css')
+		script(src='http://192.168.8.126:3000/socket.io/socket.io.js', type="text/javascript")
+		script.
+			window.IO = io;
 		script(data-main='/javascripts/main.js', src='/javascripts/vendor/require.js')
+
 
 		meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
 
