game over screen

--- a/views/client.jade
+++ b/views/client.jade
@@ -18,3 +18,7 @@ block content
 		p.waiting Waiting for more players...
 		button#ready.hidden READY
 		p.count-down.hidden 5
+
+	div.game-over.hidden
+		h2 GAME OVER
+		table.highscore
