--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -105,7 +105,8 @@ canvas {
 }
 .connect,
 .ready-screen,
-.next-object {
+.next-object,
+.game-over {
   width: 80%;
   margin: 40% auto;
   font-size: 2em;
@@ -113,22 +114,26 @@ canvas {
 .connect input,
 .ready-screen input,
 .next-object input,
+.game-over input,
 .connect button,
 .ready-screen button,
-.next-object button {
+.next-object button,
+.game-over button {
   box-sizing: border-box;
   width: 100%;
 }
 .connect input,
 .ready-screen input,
-.next-object input {
+.next-object input,
+.game-over input {
   padding: 0.5em;
   border: none;
   border-radius: 0.3em;
 }
 .connect button,
 .ready-screen button,
-.next-object button {
+.next-object button,
+.game-over button {
   margin-top: 1em;
   background-color: #d60039;
   color: #fff;
@@ -138,12 +143,14 @@ canvas {
 }
 .connect button.ready,
 .ready-screen button.ready,
-.next-object button.ready {
+.next-object button.ready,
+.game-over button.ready {
   background-color: #40d156;
 }
 .connect .count-down,
 .ready-screen .count-down,
-.next-object .count-down {
+.next-object .count-down,
+.game-over .count-down {
   color: #fff;
   font-size: 10em;
   text-align: center;
@@ -154,4 +161,34 @@ canvas {
 }
 .hidden {
   display: none;
+}
+.game-over {
+  text-align: center;
+}
+.highscore {
+  width: 50%;
+  margin: 1em auto;
+}
+.highscore td {
+  text-align: left;
+}
+.highscore td + td {
+  text-align: right;
+}
+.hud {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: #d60039;
+  color: #fff;
+  font-size: 0.8em;
+  padding: 0.5em;
+}
+.hud .client-name {
+  margin-left: 1em;
+}
+.hud .client-score {
+  margin-left: .5em;
+  font-weight: bold;
 }
