--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -32,7 +32,7 @@ canvas {
 	margin-top: 40%;
 }
 
-.connect, .ready-screen, .next-object {
+.connect, .ready-screen, .next-object, .game-over {
 	width: 80%;
 	margin: 40% auto;
 	font-size: 2em;
@@ -75,4 +75,38 @@ canvas {
 
 .hidden {
 	display: none;
+}
+
+.game-over {
+	text-align: center;
+}
+
+.highscore {
+	width: 50%;
+	margin: 1em auto;
+	td {
+		text-align: left;
+	}
+	td + td {
+		text-align: right;
+	}
+}
+
+.hud {
+	position: fixed;
+	width: 100%;
+	top: 0;
+	left: 0;
+	background-color: #d60039;
+	color: #fff;
+	font-size: 0.8em;
+	padding: 0.5em;
+
+	.client-name {
+		margin-left: 1em;
+	}
+	.client-score {
+		margin-left: .5em;
+		font-weight: bold;
+	}
 }
