--- a/views/client.jade
+++ b/views/client.jade
@@ -1,14 +1,20 @@
 extends layout
 
 block content
-	div.canvas-screen
+	div.splash-screen
+		img(src="images/mag7logo.png")
+
+	div.canvas-screen.hidden
+		div.hud
+			div.first-pos
+				span.client-name Johan
+				span.client-score
+					span.client-points
+					span.client-diff
 		canvas#image-map(width='1653', height='950').hidden
 		div.next-object.hidden
 			h2 Find me!
 			img(src="/images/pok1.png")
-
-	div.splash-screen
-		img(src="images/mag7logo.png")
 
 	div.connect.hidden
 		input(type="text", name="username", placeholder="Please enter your name")
@@ -22,3 +28,9 @@ block content
 	div.game-over.hidden
 		h2 GAME OVER
 		table.highscore
+			tr
+				td Johan
+				td 5
+			tr
+				td Jeppe
+				td 4
