--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -24,7 +24,7 @@ body {
 }
 
 canvas {
-	margin-left: 10px;
+	margin-top: 1em;
 }
 
 .splash-screen {
@@ -66,6 +66,8 @@ canvas {
 		font-size: 10em;
 		text-align: center;
 		margin-top: 0;
+		padding-top: 0;
+		line-height: 1;
 	}
 }
 
@@ -108,5 +110,9 @@ canvas {
 	.client-score {
 		margin-left: .5em;
 		font-weight: bold;
+	}
+
+	.weapon {
+		float: right;
 	}
 }
