--- a/views/client.jade
+++ b/views/client.jade
@@ -6,13 +6,13 @@ block content
 
 	div.canvas-screen.hidden
 		div.hud
-			div.first-pos
+			span.first-pos
 				span.client-name Johan
 				span.client-score
 					span.client-points
 					span.client-diff
 
-			button#weapon Fire!
+			button#weapon.weapon Fire!
 		canvas#image-map(width='1653', height='950').hidden
 		div.next-object.hidden
 			h2 Find me!
