--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -65,7 +65,7 @@ canvas {
 		color: #fff;
 		font-size: 10em;
 		text-align: center;
-		margin-top: 0;
+		margin-top: -20%;
 		padding-top: 0;
 		line-height: 1;
 	}
@@ -102,7 +102,7 @@ canvas {
 	background-color: #d60039;
 	color: #fff;
 	font-size: 0.8em;
-	padding: 0.5em;
+	line-height: 2em;
 
 	.client-name {
 		margin-left: 1em;
@@ -111,8 +111,13 @@ canvas {
 		margin-left: .5em;
 		font-weight: bold;
 	}
+	.client-diff {
+		font-size: .9em;
+		font-weight: normal;
+	}
 
 	.weapon {
 		float: right;
+		margin-right: 1em;
 	}
 }
