--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -154,7 +154,7 @@ canvas {
   color: #fff;
   font-size: 10em;
   text-align: center;
-  margin-top: 0;
+  margin-top: -20%;
   padding-top: 0;
   line-height: 1;
 }
@@ -185,7 +185,7 @@ canvas {
   background-color: #d60039;
   color: #fff;
   font-size: 0.8em;
-  padding: 0.5em;
+  line-height: 2em;
 }
 .hud .client-name {
   margin-left: 1em;
@@ -194,6 +194,11 @@ canvas {
   margin-left: .5em;
   font-weight: bold;
 }
+.hud .client-diff {
+  font-size: .9em;
+  font-weight: normal;
+}
 .hud .weapon {
   float: right;
+  margin-right: 1em;
 }
