greyscale weapon bugfix

--- a/views/client.jade
+++ b/views/client.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
 	div.canvas-screen
-		button#weapon Fire!
+		button#btnWeapon Fire!
 		canvas#image-map(width='1653', height='950').hidden
 		div.next-object.hidden
 			h2 Find me!
